<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reading Buddy</string>
    <string name="app_version">Version 1.1</string>

    <string name="action_play">Play</string>

    <string name="action_parent">Choose Level...</string>

    <string name="action_settings">Settings</string>
    <string name="action_letters">Letters</string>
    <string name="action_numbers">Numbers</string>

    <string name="action_1st100">Level 1</string>
    <string name="action_2nd100">Level 2</string>
    <string name="action_3rd100">Level 3</string>
    <string name="action_4th100">Level 4</string>
    <string name="action_5th100">Level 5</string>
    <string name="action_6th100">Level 6</string>

    <string name="action_7th100">Level 7</string>
    <string name="action_8th100">Level 8</string>
    <string name="action_9th100">Level 9</string>
    <string name="action_10th100">Level 10</string>

    <string name="action_about">About</string>
    <string name="title_settings_activity">Settings</string>
    <string name="title_about_activity">About</string>

    <string name="language_unsupported">Language not supported ...</string>
    <string name="speech_ready">Speech ready ...</string>
    <string name="speech_fail">Speech init failed ...</string>

    <string name="action_english">English...</string>
    <string name="action_mandarin">Mandarin...</string>
    <string name="action_1st_char_mandarin">Level 1</string>

    <string name="about_review">Rate this App</string>
    <string name="about_email">kris.krause@gmail.com</string>
    <string name="about_license">GPL v2</string>
    <string name="about_source_blurb">Source code &amp; more visit -</string>
    <string name="about_url">https://github.com/dragthor/learning</string>
    <string name="about_info">Free. No ads. No social. No alerts.  No in-app purchase.  No internet required. Battery friendly. Open source.</string>

</resources>
