<menu xmlns:android="http://schemas.android.com/apk/res/android" > 
 <!-- Settings, should always be in the overflow --> 
 <item android:id="@+id/action_letters" android:title="@string/action_letters" android:showAsAction="never" />
 <item android:id="@+id/action_1st100" android:title="@string/action_1st100" android:showAsAction="never" /> 
 <item android:id="@+id/action_2nd100" android:title="@string/action_2nd100" android:showAsAction="never" />  
 <item android:id="@+id/action_3rd100" android:title="@string/action_3rd100" android:showAsAction="never" />  
 <item android:id="@+id/action_4th100" android:title="@string/action_4th100" android:showAsAction="never" />  

 <item android:id="@+id/action_settings" android:title="@string/action_settings" android:showAsAction="never" /> 
 <item android:id="@+id/action_about" android:title="@string/action_about" android:showAsAction="never" /> 
</menu>
